  DomainClassGenerator improved quite a lot
  Configuration constants changed
  H2Database now uses "sa" for username in embedded mode if none is specified
  ExceptionDialog now truncates the shown message to 100 characters
  Criteria toString renamed to asString
  Database.get() removed and createInstance() added
  Dbms instance is propogated all the way down to DbConnection instead of relying on the static Database.get() method
  Dbms.getSqlDateString() implementations made thread safe using ThreadLocal DateFormats
  EntityApplicationPanel.constructApplicationModel() made non-static and protected
  EntityDbLocalProvider.disconnect() does not revalidate an invalid connection before trying to disconnect it
  EntityApplicationPanel.constructApplicationModel() made abstract and renamed to initializeApplicationModel
  EntityApplicationPanel.startApplication() signature changed accordingly
  EntityApplicationPanel.getUser() made non-static and protected
  EntityComboBoxModel now selectes item whether or not it exists in the model
  EntityApplicationPanel.saveUser() added
  EntityDbConnection.insert() now disregards id generation if primary key values are already set
  SearchType.IN removed
  EntityCriteria.propertyCriteria() added
  AuthenticationException removed, replaced with SQLException
  PropertyCriteria refactored
  common.model.formats SimpleDateFormat classes deleted
  common.model.formats.DateFormats added
  UiUtil.getSize() renamed to getScreenSizeRatio()
  common.db.Criteria.asString(), added Dbms parameter
  DbConnection.endTransaction(boolean commit) replaced with rollbackTransaction() and commitTransaction()
  EntityDb.endTransaction(boolean commit) replaced with rollbackTransaction() and commitTransaction()
  EntityDb.writeBlob() readBlob() signatures changed
  EntityCriteria removed ambiguous method
  EntityCriteria.setOrderByClause() added
  EntityModel refactored, insert/update/delete mechanism moved to EntityEditModel
  EntityEditModelTest added